Updated code to add chromew driver for word count

--- a/MySampleApp.Web/Views/Home/Index.cshtml
+++ b/MySampleApp.Web/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to URL Analyzer</h1>
+    <div>
+        <p>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Analyze">Click here to start URL analyzer</a>
+        </p>
+    </div>
 </div>
