--- a/MySampleApp.Web/Views/Shared/_Layout.cshtml
+++ b/MySampleApp.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Analyze">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Analyze">URL Analyze</a>
                         </li>
                     </ul>
                 </div>
